# dew-schema-language

./: .gitignore  Cargo.toml
dew-schema-language/: Cargo.toml
dew-schema-language/src/: engine.rs  expression.rs  lib.rs  tokenizer.rs
dew-schema-language/src/methods/: alias.rs  array.rs  cores.rs  math.rs  mod.rs  string.rs
dsl-docs/: docusaurus.config.ts  package-lock.json  package.json  pkg
dsl-docs/docs/methods/: 01_cores.md  02_alias.md  _category_.json
dsl-docs/src/pages/: demo.tsx
dsl-docs/static/: dsl.d.ts
dsl-web-wasm/: Cargo.toml
dsl-web-wasm/src/: lib.rs
